--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,34 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  border: 5px solid blue;
+  /* border: 5px solid blue; */
   background-color: white;
 }
 
 header {
   position: relative;
   margin: auto; 
-  border: 5px solid red; 
+  /* border: 5px solid red;  */
   width: 80%;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 h2 {
   font-size: 25px;
   font-weight: bolder;
-  border: 5px solid red;
+  /* border: 5px solid red; */
 }
 
+hr {
+  /* border: 1px solid blue;  */
+
+}
 
 main {
   width: 80%;
   height: auto;
-  border: 5px solid green;
+  /* border: 5px solid green; */
 }
 
 p {
@@ -33,66 +39,84 @@ p {
   text-indent: 1.5em;
   margin-top: 20px;
   margin-bottom: 20px;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 
 footer {
     text-align: center;
     color: darkgray;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     width: 100%
 }
 
-div.nav-logos {
-  border: 4px solid purple;
+header ul{
   float: right;
-  margin: 0px;
 }
 
+header li {
+  display: inline;
+}
+#fork{
+  padding-top: 10px;
+  /* border: 2px solid blue; */
+}
 #page-title {
   color: black;
   font-family: 'Yellowtail', cursive;
   display: inline-block;
   font-size: 2.5em;
-  margin-top: -0.2em;
+  margin-top: 0px;
   margin-left: 0.1em;
-  border: 1px solid blue;
+  margin-bottom: 10px;
+  /* border: 1px solid blue; */
+  /* height: 10%; */
+  
 }
 
 .nav-content {
-  display: flex; 
-  align-items: center;
-  border: 1px solid blue;
-  width: 50%;
+  
+  align-items: left;
+  /* border: 1px solid blue; */
+  /* width: 50%; */
   height: 80px;
   float: left;
+  width: 500px;
+  margin-right: 100px;
 }
 
 #logo-text {
-  
-  font-size: 0.9em;
-  margin-top: 3.6em;
-  margin-left: 1em;
-  border: 1px solid blue;
+  font-size: 13px;
+  margin-top: auto;
+  margin-left: 2.5em;
+  /* border: 1px solid blue; */
 }
-#forks {
-  
+#post-date {
+font-size: 0.7em;  
+/* border: 1px solid blue; */
+width: 50%;
+display: inline-block;
+margin-bottom: 0;
+margin-top: 0;
+margin-left: -1.5em;
+color: lightgray;
 }
 
 .main-title {
-  color: blue;
+  /* color: blue; */
   font-size: x-large;
-
+  font-family: 'Oswald', sans-serif;
+  font-weight: bold;
 }
 
 #print {
   float: right;
+  color: lightgray;
 }
 
 #chocolatepizza {
   width: 100%;
   clear: both;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
@@ -103,7 +127,7 @@ div.nav-logos {
   display: flex;
   justify-content: space-around;
   background-image: url("/img/list-bg.png");
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
     
   
@@ -111,19 +135,19 @@ div.nav-logos {
   text-align: left;
   width: 30%;
   padding: 20px 100px 20px 10px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   
 }
 
 div.ingredients-2 {
   width: 30%;
   padding: 20px 100px 20px 10px;
-  border: 1px solid blue; 
+  /* border: 1px solid blue;  */
 }
 
 div.authorbio {
   display: inline-block;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   width: 70%;
   margin-bottom: 50px;
 }
@@ -143,13 +167,13 @@ div.authorbio p {
 section {
   position: relative;
   width: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   
 }
 
 section img {
   float: left;
-  border: 3px solid pink;
+  /* border: 3px solid pink; */
 }
 
 .button {
@@ -163,12 +187,7 @@ section img {
   font-family: "Overpass", sans-serif;
 }
 
-hr.style11 {
-  height: 10px;
-  background: url(http://ibrahimjabbari.com/english/images/hr-11.png) repat-x 0,0;
-  border: 0;
-  margin-bottom: 20px;
-}
+
 
 hr {
   width: 100%;
